[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/main/ui/menu/theme/h4.theme" type="Theme" id=1]
[ext_resource path="res://src/main/puzzle/PuzzleHudStyleBox.tres" type="StyleBox" id=2]
[ext_resource path="res://src/main/ui/menu/theme/h3.theme" type="Theme" id=3]
[ext_resource path="res://src/main/ui/ButtonShortcutHelper.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/main/ui/menu/settings-menu.gd" type="Script" id=5]
[ext_resource path="res://src/main/ui/VolumeSetting.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/main/ui/UiMenuShortcut.tres" type="ShortCut" id=7]

[node name="SettingsMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 5 )

[node name="Bg" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -220.0
margin_top = -100.0
margin_right = 220.0
margin_bottom = 100.0
rect_min_size = Vector2( 440, 200 )
custom_styles/panel = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UiArea" type="Control" parent="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 15.0
margin_right = -20.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SettingsArea" type="VBoxContainer" parent="Window/UiArea"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="VBoxContainer" parent="Window/UiArea/SettingsArea"]
margin_right = 400.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="Music" parent="Window/UiArea/SettingsArea/Settings" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 20.0
margin_right = 400.0
margin_bottom = 40.0

[node name="Sounds" parent="Window/UiArea/SettingsArea/Settings" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 50.0
margin_right = 400.0
margin_bottom = 70.0
_volume_type = 1

[node name="Voices" parent="Window/UiArea/SettingsArea/Settings" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 0.0
margin_top = 80.0
margin_right = 400.0
margin_bottom = 100.0
_volume_type = 2

[node name="Ok" type="Button" parent="Window/UiArea/SettingsArea"]
margin_left = 140.0
margin_top = 130.0
margin_right = 260.0
margin_bottom = 170.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 3 )
shortcut_in_tooltip = false
shortcut = ExtResource( 7 )
text = "Ok"

[node name="ShortcutHelper" parent="Window/UiArea/SettingsArea/Ok" instance=ExtResource( 4 )]
action = "ui_cancel"

[node name="Quit" type="Button" parent="Window/UiArea"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -30.0
margin_right = 80.0
rect_min_size = Vector2( 80, 30 )
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
shortcut_in_tooltip = false
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Window/UiArea/SettingsArea/Ok" to="." method="_on_Ok_pressed"]
[connection signal="pressed" from="Window/UiArea/Quit" to="." method="_on_Quit_pressed"]
